# forge

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  package.json  pyproject.toml  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
apps/dashboard/: README.md  package.json
apps/vscode-extension/: README.md  package.json  tsconfig.json
benchmarks/: api.py  compression.py  execution.py  memory.py  planning.py  plugin.py  report.py  stress.py  verification.py  websocket.py
benchmarks/results/: baseline.json
docs/: API.md  ARCHITECTURE.md  CLI.md  CONTRIBUTING.md  EXECUTION_FLOW.md  FAQ.md  PLUGINS.md  ROADMAP.md
examples/: scaffold_examples.py
examples/analyze_logs/: workflow.json
examples/ci_generator/: workflow.json
examples/cli_generator/: workflow.json
examples/code_migration/: workflow.json
examples/convert_django_to_fastapi/: workflow.json
examples/convert_flask_to_fastapi/: workflow.json
examples/create_dockerfile/: workflow.json
examples/fix_python_bug/: workflow.json
examples/generate_fastapi/: workflow.json
examples/generate_readme/: workflow.json
examples/generate_tests/: workflow.json
examples/git_automation/: workflow.json
examples/github_issue_resolver/: workflow.json
examples/json_validator/: workflow.json
examples/kubernetes_yaml_linter/: workflow.json
examples/migrate_sqlite/: workflow.json
plugins/: scaffold_plugins.py
plugins/docker/: forge_plugin.json  (+1 more)
(+19 files in other folders)
